# skills

./: .editorconfig  .gitignore  .tmp-table.csv  AGENTS.md  FIXES_COMPLETED.md  IMPROVEMENT_PLAN.md  LICENSE  OUTPUT_CONVENTIONS.md  README.md  REVIEW_SUMMARY.md  config.example.md  index.js  install-manifest.json  install-remote.sh  install.cmd  install.ps1  install.sh  package-lock.json  package.json  pyproject.toml  requirements.txt  rolldown.config.mjs  tsconfig.json  uninstall-remote.sh  uninstall.sh
.agents/: .simple-skills-manifest.json  README.md
commands/: README.md  code-review.md  data-migration.md  debug.md  find-skill.md  hotfix.md  incident.md  onboarding.md  optimize.md  perf-investigation.md  refactor.md  release.md  route.md  run-workflow.md  security-audit.md  sync-kb.md  test-strategy.md  ticket.md  w-api-design.md  w-arch-review.md  w-code-review.md  w-data-migration.md  w-debug.md  w-dep-audit.md  w-hotfix.md  w-incident.md  w-index-project.md  w-onboarding.md  w-perf-investigation.md  w-refactor.md  w-release.md  w-security-audit.md  w-test-strategy.md  w-ticket.md
docs/: AGENTS.md  AGENT_POLICY.md  AGENT_WORK.md  CODE_COMMENTS.md  DESIGN_SYSTEM.md  MIGRATION.md  README.md  SKILL_PREAMBLE.md  START_HERE.md  THIRD_PARTY_SKILLS.md  TOOLS.md  WHAT_NEXT.md  architecture.md  design-system-astryx.css  design-system.md  first-party-skills.json  install-profiles.json  settings.yaml
evals/: README.md
knowledge-base/: INDEX.md  README.md  VERIFY.md
prompts/: README.md
scripts/: README.md  analyze_skills.py  analyze_skills.sh  auto-sync-kb.ps1  (+31 more)
(+1232 files in other folders)
