[project]
name = "simple-skills-office"
version = "0.1.0"
description = "Test and tooling dependencies for first-party Python office skills"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = [
  "openpyxl>=3.1.5",
  "python-docx>=1.1.2",
  "python-pptx>=1.0.2",
  "pypdf>=5.1.0",
  "pdfplumber>=0.11.4",
  "reportlab>=4.2.5",
  "pytest>=8.3.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = [
  "skills/office-common/python",
  "skills/xlsx/scripts",
  "skills/docx/scripts",
  "skills/pptx/scripts",
  "skills/pdf/scripts",
]
